# clinical-ai-validation-harness

./: .env.chartsearch.cloud.example  .env.chartsearch.example  .env.med-agent-hub.example  .gitguardian.yaml  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  reports-index.json
.claude/: settings.json
.claude/hooks/: protect-tdd-config.sh
.cursor/canvases/: clinical-ai-research-guidance.canvas.tsx  concept-mapping-discovery.canvas.tsx  cross-project-comparison.canvas.tsx  roadmap.canvas.tsx  validation-research.canvas.tsx
.github/workflows/: harness-ci.yml  pages.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
adapters/: README.md
adapters/catalyst/: README.md
adapters/chartsearchai/: README.md
adapters/openmrs_chatbot/: README.md
adapters/querystore/: README.md
artifacts/share/: README.md  openmrs-2.8-refapp-demo-5284-patients-2026-05-19.sql.gz.provenance.json  openmrs-2.8-refapp-demo-5284-patients-2026-06-03.sql.gz.provenance.json  openmrs-2.8-refapp-demo-5284-patients-2026-06-04.sql.gz.provenance.json  openmrs-2.8-refapp-demo-5284-patients-2026-06-06.sql.gz.provenance.json  openmrs-2.8-refapp-demo-5284-patients.provenance.json  openmrs-2.8-refapp-demo-5284-patients.sql.gz.provenance.json
compose/: Caddyfile  Dockerfile.backend  backend-init.sh  openmrs-2.8-refapp.yml  services.yml
datasets/fixtures/: known_answer_cases.yaml
datasets/load/: medication-mapping-triage.tsv  openmrs-loadback.review.md
datasets/mappings/: openmrs-2.7-to-2.8.conceptmap.json  openmrs-2.7-to-2.8.review.md  openmrs-2.7-to-2.8.yaml
datasets/sources/: README.md  large-demo-data-2-7-0.sql.checksum
datasets/transforms/: README.md
datasets/validation/: backends.json
docs/: README.md  cloud-deploy.md  constitution.md  data-remap-2.8.md  dev-roadmap.md  metadata-schema.md  pccp-change-record-template.md  session-handoff-2026-05-12.md
docs/canvases/: README.md  (+1 more)
harness/: __init__.py  cli.py  compose.py  config.py  import_smoke.py  metadata.py  schema_diff.py  submodules.py  targets.py  targets.yaml
scripts/: _preflight.sh  build-reports-index.py  capture-chart-fixture.py  chartsearch-configure.sh  chartsearch-esm-build.sh  chartsearch-importmap-gen.sh  chartsearch-registry-gen.sh  chartsearch-warmup.sh  ciel-baseline-up.sh  cloud-deploy.sh  cloud-down.sh  cloud-init.sh  cloud-lib.sh  cloud-logs.sh  cloud-reset.sh  cloud-seed.sh  cloud-ssh.sh  cloud-startup.sh  cloud-status.sh  cloud-sync.sh  cloud-tunnel.sh  cloud-up.sh  dev_eval_team.py  dump-loaded.sh  fetch-ciel-release.sh  llama-router-up.sh  llama-router.ini  load-baseline.sh  load-demo-data.sh  loadtest-down.sh  loadtest-up.sh  merge-arm-rerun.py  promote.sh  reset-transform.sh  setup-ocl-keychain.sh  snapshot-baseline.sh  sqlmesh-state-check.sh  stack-down.sh  stack-reset.sh  stack-status.sh  (+4 more)
site/: App.test.tsx  App.tsx  README.md  cursor-canvas-static.surface.test.tsx  cursor-canvas-static.test.tsx  cursor-canvas-static.tsx  cursor-canvas.tsx  index.html  landing-content.test.ts  landing-content.ts  main.tsx  nav-auto.test.ts  nav-auto.ts  nav.test.ts  nav.ts  package-lock.json  package.json  prerender-entry.test.ts  prerender-entry.tsx  prerender-lib.test.ts  prerender-lib.ts  prerender-run.mjs  search.test.ts  search.ts  styles.css  topics.test.ts  topics.ts  tsconfig.json  vite.config.ts  vitest.config.ts
specs/: metadata-schema.md  roadmap.canvas.tsx
targets/: .gitkeep
(+444 files in other folders)
