[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-ai-validation-harness"
version = "0.1.0"
description = "Cross-project clinical AI validation harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "sqlmesh>=0.150",
  "fhir.resources>=7.0",
  "PyMySQL>=1.1",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
harness-cli = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]
