[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-ai-validation-harness"
version = "0.1.0"
description = "Cross-project clinical AI validation harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "sqlmesh>=0.150",
  "fhir.resources>=7.0",
  "PyMySQL>=1.1",
  "requests>=2.32",
  "dlt[sqlalchemy]>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "tdd-guard",      # pytest reporter feeding the in-session red-first hook
  "pytest-cov",     # coverage.xml for the CI diff-coverage gate
  "diff-cover",     # enforce coverage on changed lines in CI
]

[project.scripts]
harness-cli = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
markers = [
  "slow: integration tests that take minutes — excluded from default run; included in CI matrix via `pytest -m slow`",
]
# Default: skip slow tests. CI re-enables explicitly with `-m slow` or `-m 'slow or not slow'`.
# Ignore submodules under targets/ — they are separate projects with their own
# deps + test runners (e.g. `make med-agent-hub-test`); collecting them here fails
# on missing deps (a2a-sdk, fastapi, ...).
addopts = "-m 'not slow' --ignore=targets"
